--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,24 +1,9 @@
-<nav class="navbar navbar-expand-lg px-4">
-  <a class="navbar-brand d-flex align-items-center" href="#"> 
-    <img [src]="logoPath" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
-    <span class="ms-2">IRCTC</span>
-  </a>
+<mat-toolbar color="primary" class="mat-elevation-z4">
+  <img src="/logo.png" style="background: transparent;" height="50px" width="50px" />
+  <button mat-button class="logo">Indian Railway Catering and Tourism Corporation</button>
 
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <span class="spacer"></span>
 
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-          Admin
-        </a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" routerLink="/train">Train</a></li>
-          <li><a class="dropdown-item" routerLink="/stations">Stations</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <button mat-button><mat-icon>train</mat-icon>Train</button>
+  <button mat-button><mat-icon>landmark</mat-icon>Station</button>
+</mat-toolbar>
