--- a/src/app/components/nav-menu/nav-menu.component.html
+++ b/src/app/components/nav-menu/nav-menu.component.html
@@ -1,14 +1,24 @@
 <side-nav>
   <div sidenav-content>
-    <p>This content comes from the parent component.</p>
+    <p>Add the child component here.</p>
   </div>
   <mat-toolbar color="primary" class="mat-elevation-z4">
     <img src="/logo.png" style="background: transparent;" height="50px" width="50px" />
     <button mat-button class="logo">Indian Railway Catering and Tourism Corporation</button>
   
     <span class="spacer"></span>
-  
-    <button mat-button (click)="toggleSidenav()"><mat-icon>train</mat-icon>Train</button>
-    <button mat-button><mat-icon>landmark</mat-icon>Station</button>
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button (click)="toggleSidenav()" mat-menu-item>
+        <mat-icon>train</mat-icon>
+        <span>Train</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>landmark</mat-icon>
+        <span>Station</span>
+      </button>
+    </mat-menu>
   </mat-toolbar>
 </side-nav>
