--- a/src/app/components/nav-menu/nav-menu.component.html
+++ b/src/app/components/nav-menu/nav-menu.component.html
@@ -7,7 +7,7 @@
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button (click)="toggleSidenav()" mat-menu-item>
+    <button (click)="onMenuClick('Train')" mat-menu-item>
       <mat-icon>train</mat-icon>
       <span>Train</span>
     </button>
