Fix: default behaviour of textbox error

--- a/src/app/components/train-form/train-form.component.css
+++ b/src/app/components/train-form/train-form.component.css
@@ -1,14 +1,22 @@
-.full-width {
-    width: 100%;
-  }
-  
-  .train-form {
-    max-width: 400px;
-    margin: 16px auto;
-  }
-  
-  .success-msg {
-    color: green;
-    margin-top: 10px;
-  }
-  
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  padding: 10px;
+  padding-top: 50px;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 16px;
+}
+
+button {
+  align-self: flex-start;
+}
+
+p {
+  margin-top: 16px;
+  color: green;
+  font-weight: 500;
+}
